# eWash_Backend

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1f6452e313fb_change_columns.py  2cb4780de62e_init.py  2eeded763d4f_import_roles.py  476f66852442_change_user.py  6bacb900c2dd_import_roles.py  76c1b980ac80_init2.py  a6cd05aa9fd7_add_role_to_empleado.py  c59eeb8635a8_init2.py  d20a9eb06267_init_migration.py  eb90e0d6db55_initial_migration.py
app/: __init__.py  main.py  routers.py
app/alembic/: env.py
app/api/: router.py
app/api/v1/: api.py  (+1 more)
app/core/: config.py  database.py  deps.py  exceptions.py  security.py
app/crud/: __init__.py  base.py  branch.py  client.py  organization.py  user.py
app/models/: __init__.py  base.py  branch.py  client.py  employee.py  order.py  organization.py  service.py  user.py  vehicle.py
app/schemas/: auth.py  base.py  branch.py  client.py  employee.py  order.py  organization.py  service.py  token.py  user.py  vehicle.py
app/utils/: helpers.py  init_db.py
tests/: README.md
tests/data_scripts/: check_clients.py  check_orders_table.py  check_vehicles.py  create_additional_vehicles.py  create_admin.py  create_admin_user.sql  create_sample_branch.py  create_sample_data.py  create_sample_services.py  create_services.py  create_simple_orders.py  setup_branches.sql
tests/integration/: diagnose_connection.py  reset_connection.py  test_connection.py  test_order_creation.py  test_vehicle_search.py  test_vehicles_endpoint.py
(+56 files in other folders)
